minor fix: align picture

--- a/css/landing.css
+++ b/css/landing.css
@@ -10,6 +10,7 @@ div.hero-card{
     flex-wrap: wrap;
     justify-content: center;
     gap:15px;
+    align-items: center;
 }
 
 div.left-side-hero{
